# traceflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml
app/: package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts
app/prisma/: schema.prisma
app/src/: middleware.ts
backend/: main.py  requirements.txt
backend/core/: __init__.py  config.py  logging.py  metrics.py  middleware.py  security.py
backend/db/: __init__.py  models.py  repository.py  session.py
backend/migrations/: env.py
backend/modules/: __init__.py
backend/scripts/: e2e_eval_pipeline.py  post_demo_traces.py  post_trace_and_poll_evals.py
backend/tests/: conftest.py
backend/ws/: __init__.py  traces.py
dashboard/: .dockerignore  Dockerfile  docker-compose.yml
dashboard/backend/: main.py  schemas.py
dashboard/frontend/: index.html
example/: README.md
sample-app/: README.md  app.py  load_test.py
sdk/: README.md  pyproject.toml
sdk/python/: README.md  app.py  requirements.txt
sdk/traceflow_ai/: __init__.py  config.py  openai_patch.py  sender.py
src/: db.py  main.py  otlp_ingest.py  pytest.ini  requirements.txt  schemas.py
src/db/: models.py  repository.py
src/migrations/: env.py
src/queues/: __init__.py  client.py  jobs.py  worker.py
src/scripts/: e2e_eval_pipeline.py  post_demo_traces.py  post_trace_and_poll_evals.py
src/services/: __init__.py  openai_key_validate.py
src/tests/: test_eval_run_job.py  test_integration_http.py  test_openai_key_validate.py  test_regression_run_job.py
src/traceflow_jobs/: client.py  (+3 more)
(+104 files in other folders)
